--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <h1>Hashanpreet Singh Dhaliwal</h1>
         <p>Aerospace Engineering | Propulsion & Aerodynamics</p>
-        <p>Ottawa, ON | <span class="badge">Available Jan 2026</span></p>
+        <p>Ottawa, ON</p>
     </header>
 
     <div class="container">
