Update profile picture path and commit all new/modified files for redesigned portfolio

--- a/index.html
+++ b/index.html
@@ -4,67 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hashanpreet Dhaliwal | Aerospace Portfolio</title>
-    <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; margin: 0; padding: 0; }
-        header { background: #002D62; color: white; padding: 2rem; text-align: center; }
-        .container { width: 80%; margin: auto; overflow: hidden; padding: 20px; }
-        .project-card { border: 1px solid #ddd; padding: 20px; margin-bottom: 20px; border-radius: 8px; background: #f9f9f9; }
-        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; }
-        .badge { background: #e8491d; color: white; padding: 5px 10px; border-radius: 5px; font-size: 0.8rem; }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Hashanpreet Singh Dhaliwal</h1>
-        <p>Aerospace Engineering | Propulsion & Aerodynamics</p>
-        <p>Ottawa, ON</p>
-    </header>
+    <nav>
+        <div class="nav-container">
+            <a href="index.html" class="site-title">Hashanpreet Dhaliwal</a>
+            <ul>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <div class="container">
-        <h2>Technical Expertise</h2>
-        <div class="skills-grid">
-            <div>
-                <h3>Analysis</h3>
-                <ul>
-                    <li>ANSYS Fluent (CFD)</li>
-                    <li>MDIDS-GT</li>
-                    <li>MATLAB</li>
-                </ul>
-            </div>
-            <div>
-                <h3>Design</h3>
-                <ul>
-                    <li>SolidWorks</li>
-                    <li>CATIA</li>
-                    <li>Fusion 360</li>
-                </ul>
+    <section id="hero">
+        <div class="hero-content">
+            <img src="assets/my-profile.jpg" alt="Profile Picture" class="profile-pic">
+            <h1>Hashanpreet Singh Dhaliwal</h1>
+            <p>Innovate. Automate. Dominate.</p>
+            <div class="cta-buttons">
+                <a href="work.html" class="button primary">View Work</a>
+                <a href="contact.html" class="button secondary">Contact Me</a>
             </div>
         </div>
-
-        <hr>
-
-        <h2>Featured Engineering Projects</h2>
-        
-        <div class="project-card">
-            <h3>Gas Turbine Reverse Engineering (Jet-Cat P500)</h3>
-            <p>Conducted parametric studies on compressor pressure ratio and TIT to optimize component efficiency and minimize TSFC.</p>
+    </section>
+    
+    <footer id="main-footer">
+        <div class="container">
+            <p>&copy; 2026 Hashanpreet Dhaliwal. All rights reserved.</p>
         </div>
-
-        <div class="project-card">
-            <h3>V2500 Turbofan Preliminary Design</h3>
-            <p>Designed turbine mean-line stages and developed blade airfoils/disks to meet rigorous stress analysis criteria.</p>
-        </div>
-
-        <hr>
-
-        <h2>Professional Experience</h2>
-        <p><strong>Jr. Hardware Design Engineer</strong> - Collins Aerospace (RTX)</p>
-        <ul>
-            <li>Debugged PCBs for radio systems in ESD-controlled environments.</li>
-            <li>Assisted in emissions testing and technical data analysis.</li>
-            <li>Designed mechanical jigs and power supply for lab operations</li>
-            <li>Generated 3D drawings of parts and cables using Solid Autoworks </li>
-        </ul>
-    </div>
+    </footer>
 </body>
 </html>
